[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/gui.gd" type="Script" id=1]
[ext_resource path="res://gui/btn_game.png" type="Texture" id=2]
[ext_resource path="res://fonts/ARMY RUST.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gui/btn_game_pressed.png" type="Texture" id=4]
[ext_resource path="res://gui/select_icon.png" type="Texture" id=5]
[ext_resource path="res://gui/move_icon.png" type="Texture" id=6]
[ext_resource path="res://gui/w1_icon.png" type="Texture" id=7]
[ext_resource path="res://gui/w2_icon.png" type="Texture" id=8]
[ext_resource path="res://gui/camera_icon.png" type="Texture" id=9]
[ext_resource path="res://gui/sound_icon.png" type="Texture" id=10]
[ext_resource path="res://gui/dial_a_1.png" type="Texture" id=11]
[ext_resource path="res://gui/dial_a_2.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 11 ) ]
}

[node name="_main" type="CanvasModulate" groups=[
"gui",
]]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="GUI" type="CanvasLayer" parent="."]

[node name="tiempo" type="Position2D" parent="GUI" groups=[
"tiempo",
]]
visible = false
position = Vector2( 54.5006, 339.311 )

[node name="dial" type="Sprite" parent="GUI/tiempo"]
position = Vector2( 478.201, -283.052 )
scale = Vector2( 1.0445, 0.644479 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 13, 16, 100, 95 )

[node name="time" type="Label" parent="GUI/tiempo"]
margin_left = 442.003
margin_top = -310.857
margin_right = 535.003
margin_bottom = -205.857
custom_fonts/font = SubResource( 1 )

[node name="Botones" type="Position2D" parent="GUI" groups=[
"botones",
]]
visible = false

[node name="btn_select" type="TextureButton" parent="GUI/Botones"]
modulate = Color( 0.329412, 0.882353, 0.556863, 1 )
margin_left = 32.0
margin_top = 503.0
margin_right = 117.0
margin_bottom = 588.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Sprite" type="Sprite" parent="GUI/Botones/btn_select"]
modulate = Color( 0.0705882, 0.227451, 0.94902, 1 )
position = Vector2( 42.1715, 42.1714 )
texture = ExtResource( 5 )

[node name="btn_move" type="TextureButton" parent="GUI/Botones"]
modulate = Color( 0.329412, 0.882353, 0.556863, 1 )
margin_left = 132.0
margin_top = 500.0
margin_right = 217.0
margin_bottom = 585.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Sprite" type="Sprite" parent="GUI/Botones/btn_move"]
modulate = Color( 0.0705882, 0.227451, 0.94902, 1 )
position = Vector2( 42.1715, 42.1714 )
texture = ExtResource( 6 )

[node name="btn_w1" type="TextureButton" parent="GUI/Botones"]
modulate = Color( 0.329412, 0.882353, 0.556863, 1 )
margin_left = 232.0
margin_top = 500.0
margin_right = 317.0
margin_bottom = 585.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Sprite" type="Sprite" parent="GUI/Botones/btn_w1"]
modulate = Color( 0.0705882, 0.227451, 0.94902, 1 )
position = Vector2( 42.1715, 42.1714 )
texture = ExtResource( 7 )

[node name="btn_w2" type="TextureButton" parent="GUI/Botones"]
modulate = Color( 0.329412, 0.882353, 0.556863, 1 )
margin_left = 332.0
margin_top = 500.0
margin_right = 417.0
margin_bottom = 585.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Sprite" type="Sprite" parent="GUI/Botones/btn_w2"]
modulate = Color( 0.0705882, 0.227451, 0.94902, 1 )
position = Vector2( 42.1715, 42.1714 )
texture = ExtResource( 8 )

[node name="btn_cam" type="TextureButton" parent="GUI/Botones"]
modulate = Color( 0.329412, 0.882353, 0.556863, 1 )
margin_left = 432.0
margin_top = 500.0
margin_right = 517.0
margin_bottom = 585.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Sprite" type="Sprite" parent="GUI/Botones/btn_cam"]
modulate = Color( 0.0705882, 0.227451, 0.94902, 1 )
position = Vector2( 42.1715, 42.1714 )
texture = ExtResource( 9 )

[node name="btn_exit" type="TextureButton" parent="GUI/Botones"]
modulate = Color( 0.329412, 0.882353, 0.556863, 1 )
margin_left = 957.733
margin_top = 6.98947
margin_right = 1009.73
margin_bottom = 64.9895
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="GUI/Botones/btn_exit"]
margin_left = 5.01062
margin_top = 23.3825
margin_right = 45.0106
margin_bottom = 54.3825
custom_colors/font_color = Color( 0.196078, 0.298039, 0.858824, 1 )
text = "X
"
align = 1
valign = 1

[node name="btn_sound" type="TextureButton" parent="GUI/Botones"]
modulate = Color( 0.329412, 0.882353, 0.556863, 1 )
margin_left = 957.733
margin_top = 80.0
margin_right = 1009.73
margin_bottom = 138.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Sprite" type="Sprite" parent="GUI/Botones/btn_sound"]
modulate = Color( 0.0705882, 0.227451, 0.94902, 1 )
position = Vector2( 25.0872, 29.6788 )
scale = Vector2( 0.76673, 0.740811 )
texture = ExtResource( 10 )

[node name="x" type="Label" parent="GUI/Botones/btn_sound"]
visible = false
margin_left = -31.4719
margin_top = 11.8532
margin_right = 8.52806
margin_bottom = 42.8532
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0.196078, 0.858824, 0.74902, 1 )
text = "X
"
align = 1
valign = 1

[node name="Dialogo" type="Position2D" parent="GUI" groups=[
"tuto",
]]
position = Vector2( 47.4683, 7.03235 )

[node name="dial" type="Sprite" parent="GUI/Dialogo"]
position = Vector2( 488.749, 79.9929 )
scale = Vector2( 9.27235, 1.51427 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 13, 16, 100, 95 )

[node name="tuto_text" type="Label" parent="GUI/Dialogo"]
margin_left = 105.999
margin_top = 25.9194
margin_right = 198.999
margin_bottom = 98.9194
custom_fonts/font = SubResource( 2 )

[node name="TextureButton" type="TextureButton" parent="GUI/Dialogo"]
margin_left = 864.968
margin_top = 94.3558
margin_right = 934.968
margin_bottom = 145.356
texture_normal = ExtResource( 4 )
expand = true

[node name="acept" type="Label" parent="GUI/Dialogo"]
margin_left = 883.204
margin_top = 99.9324
margin_right = 976.204
margin_bottom = 172.932
custom_fonts/font = SubResource( 2 )
text = "OK"

[node name="AnimationPlayer" type="AnimationPlayer" parent="GUI/Dialogo"]
autoplay = "talk"
anims/talk = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="GUI/Dialogo"]
position = Vector2( 26.3713, 79.114 )
texture = ExtResource( 11 )
[connection signal="button_down" from="GUI/Botones/btn_select" to="." method="_on_btn_select_button_down"]
[connection signal="button_down" from="GUI/Botones/btn_move" to="." method="_on_btn_move_button_down"]
[connection signal="button_down" from="GUI/Botones/btn_w1" to="." method="_on_btn_w1_button_down"]
[connection signal="button_down" from="GUI/Botones/btn_w2" to="." method="_on_btn_w2_button_down"]
[connection signal="button_down" from="GUI/Botones/btn_cam" to="." method="_on_btn_cam_button_down"]
[connection signal="button_down" from="GUI/Botones/btn_exit" to="." method="_on_btn_exit_button_down"]
[connection signal="button_down" from="GUI/Botones/btn_sound" to="." method="_on_btn_sound_button_down"]
[connection signal="pressed" from="GUI/Dialogo/TextureButton" to="." method="_on_TextureButton_pressed"]
